# CVars

./: .gitmodules  CMakeLists.txt
include/GLConsole/: GLConsole.h  GLFont.h
include/cvars/: CVar.h  CVarMapIO.h  CVarVectorIO.h  Timestamp.h  Trie.h  TrieNode.h  config.h  glplatform.h
samples/: CMakeLists.txt
samples/GlfwConsole/: CMakeLists.txt  GlfwConsoleDemo.cpp  my_cvars.txt  text.fs  text.vs  triangle.fs  triangle.vs
src/: CVarParse.cpp  Timestamp.cpp  Trie.cpp  TrieNode.cpp
