INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
#LINK_DIRECTORIES("../../CVars/" "../../GLConsole/")
ADD_EXECUTABLE(GlfwConsole GlfwConsoleDemo.cpp)
set_property (DIRECTORY PROPERTY VS_STARTUP_PROJECT GlfwConsole)
TARGET_LINK_LIBRARIES(GlfwConsole glfw cvars)
set_target_properties(GlfwConsole PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
